[build-system]
requires = ["setuptools >= 42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rmshared"
version = "0.7.5"
authors = [
    {name = "CordiS", email = "cordis@rebelmouse.com"}
]
description = "RebelMouse shared library"
license = {text = "Apache 2.0"}
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/RebelMouseTeam/rmshared"

[tool.setuptools]
packages = ["rmshared"]

[tool.setuptools.package-discovery]
where = ["."]
include = ["rmshared*"]
