[build-system]
requires = ["setuptools >= 42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rmshared"
readme = "README.md"
version = "0.9.9"
authors = [
    {name = "CordiS", email = "cordis@rebelmouse.com"}
]
description = "RebelMouse shared library"
license = {text = "Apache 2.0"}
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.11"
dependencies = [
    "lark==1.2.2",
    "orjson>=3.10,<3.12",
    "aiohttp==3.10.11",
    "enumclasses @ https://github.com/RebelMouseTeam/enumclasses/archive/refs/tags/v1.1.7.tar.gz"
]

[project.optional-dependencies]
dev = [
    "mock==5.1.0",
    "faker==24.14.0",
    "pytest==8.2.0",
    "flake8==7.0.0"
]

[project.urls]
Homepage = "https://github.com/RebelMouseTeam/rmshared"

[tool.setuptools.packages.find]
include = ["rmshared*"]
exclude = ["*.tests.*"]

[tool.setuptools.package-data]
"rmshared.sql.parsing.lark" = ["*.lark"]
"rmshared.content.taxonomy.sql.parsing.lark" = ["*.lark"]
